--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">T29IdeaGarden2</string>
+    <string name="app_name">我们的思想花园demo</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -11,6 +11,7 @@
     <string name="nothing_for_now">Nothing For Now</string>
     <string name="settings">Settings</string>
     <string name="your_tools">你的工具</string>
-    <string name="today_trending">今日头条</string>
+    <string name="today_trending">热到爆炸的思想</string>
     <string name="edit_profile">编辑我的资料</string>
+    <string name="help">关于</string>
 </resources>
